--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="https://paresh7788.github.io/calculator/" target="_blank">Calculator</a></li>
             <li><a href="https://paresh7788.github.io/FanMadeGallery/" target="_blank">Fan Made Gallery</a></li>
             <li><a href="https://paresh7788.github.io/typetesting/" target="_blank">type testing</a></li>
+            <li><a href="https://paresh7788.github.io/todoList/" target="_blank">ToDo List </a></li>
         </ol>
     </div>
 
